# pastiche

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  compose.prod.yml  compose.yml  tsconfig.json
.codex/: config.toml
.github/workflows/: release.yml
backend/: .containerignore  Containerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_snippets.py  0003_create_api_keys.py  0004_add_snippet_pagination_indexes.py  0005_add_snippet_short_codes.py  0006_add_snippet_is_pinned.py  0007_add_snippet_color.py  0008_add_snippet_is_public.py  0009_add_snippet_search_indexes.py  0010_create_labels.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  keys.py  labels.py  public.py  snippets.py
backend/app/core/: config.py  database.py  security.py  short_code.py
backend/app/models/: api_key.py  label.py  pagination.py  snippet.py  snippet_label.py  user.py
backend/app/services/: api_key_service.py  label_service.py  patch_service.py  snippet_service.py  user_service.py
backend/tests/: conftest.py  test_auth.py  test_labels.py  test_public.py  test_snippets.py
cli/agent-harness/: pastiche.md  setup.py
docs/: ARCHITECTURE.md  SECURITY.md  deploy.md
docs/plans/: 2026-03-31-markdown-content-negotiation.md  2026-03-31-short-url-direct-render.md  2026-04-10-cli-anything-pastiche.md  2026-04-14-fix-search-propagation.md  (+9 more)
frontend/: Containerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+90 files in other folders)
